Fixed overlapping of topic name and topic actions
-Changed notes topic flex container into grid with two rows, and put
topic actions in the first row so they stop overlapping on small screens

--- a/static/css/topics.css
+++ b/static/css/topics.css
@@ -575,8 +575,20 @@
     max-width: 90%;
   }
 
+  .notes-topic {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+  }
+
   .topic-name {
     font-size: 2em;
+    grid-row: 2/3;
+    justify-self: center;
+  }
+
+  .topic-actions {
+    grid-row: 1/2;
+    justify-self: flex-end;
   }
 
   .saved-notes {
